--- a/style.css
+++ b/style.css
@@ -71,3 +71,12 @@
   background-color: beige;
   border-radius: 3px;
 }
+
+@media screen and (max-width: 63rem) {
+  .hide {
+    display: inline;
+  }
+  .menus {
+    display: none;
+  }
+}
