--- a/style.css
+++ b/style.css
@@ -80,3 +80,16 @@
     display: none;
   }
 }
+
+.search-button {
+  background-color: rgb(86, 123, 149);
+  border: 1px solid rgb(50, 104, 145);
+  color: rgb(255, 255, 255);
+  height: 33px;
+  border-radius: 3px;
+}
+#search-input {
+  border: 1px solid rgb(226, 226, 226);
+  border-radius: 3px;
+  height: 33px;
+}
