--- a/style.css
+++ b/style.css
@@ -93,3 +93,10 @@
   border-radius: 3px;
   height: 33px;
 }
+.pagenation-nav {
+  display: flex;
+  justify-content: center;
+}
+.pagination {
+  margin-top: 1em;
+}
